# embodied-city-python-sdk

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release-pypi.yml
embodiedcity/: __init__.py  client.py
examples/: async_example.py  example.py  sync_example.py
scripts/: gen_docs.sh  install-local.sh
vln/: agent.py  agent_control.py  agentxyg.py  agentzbn.py  agentzdy.py  agentzwc.py
