[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

# https://setuptools-git-versioning.readthedocs.io/en/stable/install.html
[tool.setuptools-git-versioning]
enabled = true

[project]
name = "embodiedcity"
authors = [{ name = "Jun Zhang", email = "zhangjun990222@gmail.com" }]
description = "Embodied City Python SDK"
keywords = ["city", "embodied", "sdk"]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "requests >= 2.27.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://embodied-city.fiblab.net"
Documentation = "https://pycitysim.sim.fiblab.net/pycitysim"
Repository = "https://github.com/tsinghua-fib-lab/embodied-city-python-sdk.git"
Issues = "https://github.com/tsinghua-fib-lab/embodied-city-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["embodiedcity*"]
